example-apps/uptimekuma/resource-yamls/route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: uptime-kuma
  namespace: uptime-kuma
  labels:
    app: uptime-kuma
    app.kubernetes.io/component: uptime-kuma 
    app.kubernetes.io/instance: uptime-kuma
    app.kubernetes.io/name: uptime-kuma
    app.kubernetes.io/part-of: uptime-kuma-server
    app.kubernetes.io/runtime-version: latest
spec:
  host: uptime.apps.ocp.lab.io
  to:
    kind: Service
    name: uptime-kuma
    weight: 100
  port:
    targetPort: 80-tcp
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
